--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 databases:
   - name: postgres
-    databaseName: pace_maker
+    databaseName: pace_maker_production
     user: pace_maker
     plan: free
 
@@ -14,7 +14,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: pace_maker
+          name: pace_maker_production
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
