--- a/config/cable.yml
+++ b/config/cable.yml
@@ -8,5 +8,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: <%= Rails.application.credentials[:redis_url] || ENV.fetch("REDIS_URL", "redis://localhost:6379/1") %>
   channel_prefix: pace_maker_production
