--- a/test/fixtures/runs.yml
+++ b/test/fixtures/runs.yml
@@ -4,12 +4,12 @@ one:
   distance: 1.5
   time: 2024-06-10 18:09:23
   date: 2024-06-10
-  comments: MyText
+  notes: MyText
   user: one
 
 two:
   distance: 1.5
   time: 2024-06-10 18:09:23
   date: 2024-06-10
-  comments: MyText
+  notes: MyText
   user: two
