--- a/test/fixtures/team_join_requests.yml
+++ b/test/fixtures/team_join_requests.yml
@@ -3,9 +3,9 @@
 one:
   user: one
   team: one
-  status: MyString
+  status: pending
 
 two:
   user: two
   team: two
-  status: MyString
+  status: approved
