--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  content: MyText
+  content: Comment 1
   user: one
   commentable: one
   commentable_type: Commentable
@@ -10,7 +10,7 @@ one:
   reply_count: 1
 
 two:
-  content: MyText
+  content: Comment 2
   user: two
   commentable: two
   commentable_type: Commentable
