--- a/test/fixtures/runs.yml
+++ b/test/fixtures/runs.yml
@@ -2,14 +2,14 @@
 
 one:
   distance: 1.5
-  time: 2024-06-10 18:09:23
+  duration: <%= 1.hour %>
   date: 2024-06-10
   notes: MyText
   user: one
 
 two:
   distance: 1.5
-  time: 2024-06-10 18:09:23
+  duration: <%= 1.hour %>
   date: 2024-06-10
   notes: MyText
   user: two
