--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,9 +3,14 @@
 # This model initially had no columns defined. If you add columns to the
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  email: john.doe@gmail.com
+  username: john_doe
+  display_name: John Doe
+  gender: male
+
+two:
+  email: jane.doe@gmail.com
+  username: jane_doe
+  display_name: Jane Doe
+  gender: female
